Polishing: removed spring-instrument-tomcat dep. and config.; updated some dep. ver.